--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bible Quotes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/pic.png">
+
+     <meta property="og:title" content="Daily Bible Quotes">
+     <meta property="og:description" content="Be uplifted and encouraged with a new verse each day.">
+     <meta property="og:image" content="https://yourbiblequotesite.com/images/preview.jpg">
+     <meta property="og:url" content="https://yourbiblequotesite.com">
+     <meta property="og:type" content="website">
 </head>
 <body>
 
@@ -26,51 +33,64 @@
     </div>
 
     <script>
-        const quotes = [
-            "I can do all things through Christ who strengthens me. — Philippians 4:13",
-            "For I know the plans I have for you, declares the Lord. — Jeremiah 29:11",
-            "Be still, and know that I am God. — Psalm 46:10",
-            "Trust in the Lord with all your heart. — Proverbs 3:5",
-            "God is our refuge and strength, a very present help in trouble. — Psalm 46:1"
-        ];
+        const imageThemes = [
+  'strength', 'peace', 'courage', 'calm', 'gratitude',
+  'trust', 'bravery', 'hope', 'comfort', 'faith'
+];
 
-        function generateQuote() {
-            const quote = quotes[Math.floor(Math.random() * quotes.length)];
-            document.getElementById('quote').innerText = quote;
-        }
+imageThemes.forEach(theme => {
+  const img = new Image();
+  img.src = `images/${theme}.jpg`;
+});
+       const quotes = [
+      { text: "I can do all things through Christ which strengtheneth me. — Philippians 4:13 (KJV)", emotion: "strength" },
+      { text: "For I know the thoughts that I think toward you, saith the Lord, thoughts of peace, and not of evil, to give you an expected end. — Jeremiah 29:11 (KJV)", emotion: "hope" },
+      { text: "Be still, and know that I am God: I will be exalted among the heathen, I will be exalted in the earth. — Psalm 46:10 (KJV)", emotion: "peace" },
+      { text: "Trust in the Lord with all thine heart; and lean not unto thine own understanding. — Proverbs 3:5 (KJV)", emotion: "faith" },
+      { text: "God is our refuge and strength, a very present help in trouble. — Psalm 46:1 (KJV)", emotion: "comfort" },
+      { text: "Fear thou not; for I am with thee: be not dismayed; for I am thy God: I will strengthen thee, yea, I will help thee; yea, I will uphold thee with the right hand of my righteousness. — Isaiah 41:10 (KJV)", emotion: "courage" },
+      { text: "Be careful for nothing; but in every thing by prayer and supplication with thanksgiving let your requests be made known unto God. And the peace of God, which passeth all understanding, shall keep your hearts and minds through Christ Jesus. — Philippians 4:6–7 (KJV)", emotion: "calm" },
+      { text: "I sought the Lord, and he heard me, and delivered me from all my fears. They looked unto him, and were lightened: and their faces were not ashamed. O taste and see that the Lord is good: blessed is the man that trusteth in him. — Psalm 34:4–5, 8 (KJV)", emotion: "gratitude" },
+      { text: "And we know that all things work together for good to them that love God, to them who are the called according to his purpose. — Romans 8:28 (KJV)", emotion: "trust" },
+      { text: "Have not I commanded thee? Be strong and of a good courage; be not afraid, neither be thou dismayed: for the Lord thy God is with thee whithersoever thou goest. — Joshua 1:9 (KJV)", emotion: "bravery" }
+    ];
 
-        function shareOnFacebook() {
-            const quote = document.getElementById('quote').innerText;
-            const url = `https://www.facebook.com/sharer/sharer.php?u=&quote=${encodeURIComponent(quote)}`;
-            window.open(url, '_blank');
-        }
+    function generateQuote() {
+  const randomQuote = quotes[Math.floor(Math.random() * quotes.length)];
+  const quoteText = randomQuote.text;
+  const emotion = randomQuote.emotion;
 
-        // Generate the first quote when the page loads
-        window.onload = generateQuote;
+  const quoteElem = document.getElementById('quote');
+  quoteElem.classList.remove('fade-in');
+  void quoteElem.offsetWidth; // force reflow for animation
+  quoteElem.classList.add('fade-in');
+  quoteElem.innerText = quoteText;
 
-        function toggleDarkMode() {
-    const body = document.body;
-    const isDark = document.getElementById('darkModeToggle').checked;
-    body.classList.toggle('dark', isDark);
+  // Update body class for emotion-based background
+  document.body.className = emotion + (document.body.classList.contains('dark') ? ' dark' : '');
+}
 
-     // Load saved theme
-     window.onload = function () {
-        const darkMode = localStorage.getItem('darkMode') === 'true';
-        document.getElementById('darkModeToggle').checked = darkMode;
-        document.body.classList.toggle('dark', darkMode);
-        generateQuote(); // show a quote on load
-    };
+   function shareOnFacebook() {
+  const quote = document.getElementById('quote').innerText;
+  const websiteUrl = 'https://ruko-1.github.io/Bible-Quotes/'; // ← Replace with your real site URL
 
+  const facebookShareUrl = `https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(websiteUrl)}&quote=${encodeURIComponent(quote)}`;
 
-    // Optional: toggle button text
-    if (body.classList.contains('dark')) {
-        btn.innerText = '☀️ Light Mode';
-    } else {
-        btn.innerText = '🌙 Dark Mode';
+  window.open(facebookShareUrl, '_blank', 'width=600,height=400');
+}
+
+    function toggleDarkMode() {
+      const isDark = document.getElementById('darkModeToggle').checked;
+      document.body.classList.toggle('dark', isDark);
+      localStorage.setItem('darkMode', isDark);
     }
 
-   
-}
+    window.onload = function () {
+      const darkMode = localStorage.getItem('darkMode') === 'true';
+      document.getElementById('darkModeToggle').checked = darkMode;
+      if (darkMode) document.body.classList.add('dark');
+      generateQuote();
+    };
     </script>
 </body>
 </html>
