--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <div>
             <button onclick="generateQuote()">New Quote</button>
             <button onclick="shareOnFacebook()"><img src="facebook.png" alt="facebook" style="width:16px; vertical-align:middle;"> Facebook</button>
+            <button onclick="shareOnWhatsApp()">
+  <img src="whatsapp.png" alt="WhatsApp" style="width:16px; vertical-align:middle;">
+  Share on WhatsApp
+</button>
         </div>
     </div>
 
@@ -79,6 +83,14 @@ imageThemes.forEach(theme => {
   window.open(facebookShareUrl, '_blank', 'width=600,height=400');
 }
 
+function shareOnWhatsApp() {
+  const quote = document.getElementById('quote').innerText;
+  const siteUrl = 'https://ruko-1.github.io/Bible-Quotes/'; // Replace with your actual site
+  const message = `${quote}\n\nRead more at: ${siteUrl}`;
+  const encodedMessage = encodeURIComponent(message);
+  const whatsappUrl = `https://wa.me/?text=${encodedMessage}`;
+  window.open(whatsappUrl, '_blank');
+}
     function toggleDarkMode() {
       const isDark = document.getElementById('darkModeToggle').checked;
       document.body.classList.toggle('dark', isDark);
